<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="140dp"
                android:layout_height="220dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="5dp"
                android:src="@mipmap/loading_image" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/movie_poster"
                android:singleLine="true"
                android:text="Title"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/movie_poster"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="5" />

            <TextView
                android:id="@+id/tag_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ratingBar"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/movie_poster"
                android:text="tag line"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tag_line"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/movie_poster"
                android:singleLine="true"
                android:text="6.7/10"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/release_date"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/movie_poster"
                android:singleLine="true"
                android:text="6.7/10"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/revenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/budget"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/movie_poster"
                android:singleLine="true"
                android:text="6.7/10"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/revenue"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/movie_poster"
                android:singleLine="true"
                android:text="6.7/10"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black" />

            <RatingBar
                android:id="@+id/star_img"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_poster"
                android:layout_margin="5dp"
                android:isIndicator="true"
                android:numStars="1"
                android:paddingTop="8dp"
                android:rating="1" />

            <TextView
                android:id="@+id/vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_poster"
                android:layout_marginTop="12dp"
                android:layout_toRightOf="@id/star_img"
                android:text="(8.7)/10"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/vote_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/vote_average"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/star_img"
                android:text="19028 users"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/over_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/star_img"
                android:padding="8dp"
                android:text="TEST"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/over_view"
                android:padding="8dp"
                android:src="@mipmap/favorite_disable_normal" />

            <ImageView
                android:id="@+id/watch_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/over_view"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/favorite"
                android:padding="8dp"
                android:src="@mipmap/watchlist_disable_normal" />

            <TextView
                android:id="@+id/my_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/favorite"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:padding="8dp"
                android:text="My Favorite"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/my_watch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/favorite"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_toRightOf="@id/my_fav"
                android:padding="8dp"
                android:text="My Watchlist"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black" />

            <View
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@id/my_watch"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/material_grey_300" />


            <TextView
                android:id="@+id/posters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view1"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:text="@string/posters"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:id="@+id/posters_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/posters">

                <LinearLayout
                    android:id="@+id/posters_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp" />
            </HorizontalScrollView>

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@id/posters_list"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/material_grey_300" />


            <TextView
                android:id="@+id/trailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view2"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:text="@string/trailers"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:id="@+id/trailers_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/trailers">

                <LinearLayout
                    android:id="@+id/trailers_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp" />
            </HorizontalScrollView>

            <View
                android:id="@+id/view3"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@id/trailers_list"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/material_grey_300" />


            <TextView
                android:id="@+id/casts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view3"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:text="@string/casts"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:id="@+id/casts_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/casts"
                android:padding="5dp">

                <LinearLayout
                    android:id="@+id/casts_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                </LinearLayout>
            </HorizontalScrollView>

            <View
                android:id="@+id/view4"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@id/casts_list"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/material_grey_300" />


            <TextView
                android:id="@+id/crew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view4"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:text="@string/crew"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:id="@+id/crew_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/crew"
                android:padding="5dp">

                <LinearLayout
                    android:id="@+id/crew_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>